# dcm-colmap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dcmcolmap/: __init__.py
src/dcmcolmap/colormaps/: __init__.py  fall.py  hotiron.py  hotmetalblue.py  pet.py  pet20step.py  spring.py  summer.py  winter.py
src/dcmcolmap/registry/: __init__.py  registry.py
tests/: test_registry.py
