[project]
name = "dcm-colmap"
dynamic = ["version"]
description = "DICOM colormaps for matplotlib."
authors = [{ name = "Carl Villads Priisholm", email = "me@cvrp.dk" }]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = [
    "dicom",
    "colormap",
    "matplotlib",
    "medical-imaging",
    "pet",
    "nuclear-medicine",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = ["matplotlib>=3.8", "numpy >= 1.25"]

[project.urls]
Homepage = "https://github.com/carlvillads/dcm-colmap"
Repository = "https://github.com/carlvillads/dcm-colmap.git"

[tool.hatch.version]
path = "src/dcmcolmap/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dcmcolmap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.14.6", "pytest>=9.0.0", "mypy>=1.11", "pydicom>=3.0.2"]

[tool.ruff]
line-length = 90
target-version = "py311"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
exclude = [
    ".git",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D202", "D401", "D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true
